Modified API spec. Closed #2
